# ableton-mcp

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  SHOWCASE.md  docker-compose.dev.yml  docker-compose.yml  mutmut_config.py  pyproject.toml  requirements.txt  setup.cfg
.claude/: .mcp.json.json  settings.local.json
.context/: recent-session.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker.yml  lint.yml  release.yml  security.yml  tests.yml
ableton_mcp/: __init__.py  __main__.py  container.py  main.py
ableton_mcp/adapters/: __init__.py  service_adapters.py
ableton_mcp/application/: __init__.py  use_cases.py
ableton_mcp/core/: __init__.py  exceptions.py  logging.py
ableton_mcp/domain/: __init__.py  entities.py  ports.py  repositories.py  services.py
ableton_mcp/infrastructure/: __init__.py  health.py  metrics.py  rate_limit.py  repositories.py  services.py  shutdown.py
ableton_mcp/infrastructure/osc/: __init__.py  correlator.py  gateway.py  transport.py
ableton_mcp/interfaces/: __init__.py  mcp_server.py
benchmarks/: __init__.py  conftest.py  test_benchmarks.py
docs/: ABLETON_LIVE_COMPLETE_REFERENCE.md  ABLETON_MCP_DEVELOPMENT_PHASES.md  ARCHITECTURE_AND_DEVELOPMENT_GUIDE.md  CLAUDE_CODE_INTEGRATION.md  ENHANCE_2_PLAN.md  INSTRUMENT_TECHNIQUES_SOURCE_OF_TRUTH.md  KNOWLEDGE_ARCHITECTURE.md  MUSICAL_EXPRESSION_SOURCE_OF_TRUTH.md  MUSICAL_NOTATION_SOURCE_OF_TRUTH.md  MUSIC_AI_TECHNIQUES_SOURCE_OF_TRUTH.md  MUSIC_PSYCHOLOGY_SOURCE_OF_TRUTH.md  OPEN_SOURCE_READINESS_ROADMAP.md  QA_GUIDE.md  RHYTHMS_SOURCE_OF_TRUTH.md  SECURITY_ASSESSMENT.md  SHOWCASE.md  SONG_STRUCTURE_ARRANGEMENT_SOURCE_OF_TRUTH.md  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: application.rst  domain.rst  index.rst  infrastructure.rst  interfaces.rst
docs/guides/: architecture.rst  music-theory.rst  troubleshooting.rst
docs/sources/: ABLETON_MCP_SOURCE_OF_TRUTH.md  ABLETON_WORKFLOW_SOURCE_OF_TRUTH.md  AUDIO_PROCESSING_SOURCE_OF_TRUTH.md  GENRE_ANALYSIS_SOURCE_OF_TRUTH.md  MIX_MASTERING_SOURCE_OF_TRUTH.md  MUSIC_SOFTWARE_ECOSYSTEM_SOURCE_OF_TRUTH.md  MUSIC_THEORY_SOURCE_OF_TRUTH.md
examples/: README.md  add_notes.py  basic_usage.py  full_workflow.py  harmony_analysis.py  quickstart.ipynb  song_info.py  track_operations.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_workflow.py
tests/property/: test_entities_properties.py  test_music_theory_properties.py
tests/unit/: test_container.py  test_infrastructure_services.py  test_main.py  test_mcp_server.py  test_music_theory_service.py  test_osc_correlator.py  test_osc_gateway.py  test_osc_transport.py  test_repositories.py  test_service_adapters.py  test_use_cases.py  test_validation_service.py
work1 Project/: work1.als
work1 Project/Backup/: work1 [2026-02-03 094455].als
