[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ableton-mcp"
version = "1.0.0"
description = "Professional MCP server for Ableton Live integration with AI music intelligence"
authors = [
    {name = "Jose Figueredo"}
]
dependencies = [
    "mcp>=1.0.0",
    "python-osc>=1.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "dependency-injector>=4.41.0",
    "asyncio-mqtt>=0.16.0",
    "typing-extensions>=4.8.0",
    "rich>=13.7.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "hypothesis>=6.88.0",
    "mutmut>=2.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "hypothesis>=6.88.0",
    "mutmut>=2.4.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
]

[project.scripts]
ableton-mcp = "ableton_mcp.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["ableton_mcp"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "RUF006", # asyncio.create_task without storing reference (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG002", # unused method argument (common in fixtures)
    "ARG001", # unused function argument
    "E402",   # module level import not at top of file (ok for pytest markers)
    "F841",   # local variable assigned but never used (ok in test setup)
    "RUF059", # unpacked variable never used (ok in tests)
]
# Production hardening modules have placeholder implementations
"ableton_mcp/infrastructure/services.py" = ["ARG002", "RUF012"]
"ableton_mcp/infrastructure/repositories.py" = ["ARG002"]
"ableton_mcp/infrastructure/health.py" = ["SIM102"]
"ableton_mcp/infrastructure/osc/correlator.py" = ["ARG002"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pythonosc.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=ableton_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["ableton_mcp"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    # Production hardening modules (tested in integration/staging environments)
    "ableton_mcp/infrastructure/health.py",
    "ableton_mcp/infrastructure/metrics.py",
    "ableton_mcp/infrastructure/rate_limit.py",
    "ableton_mcp/infrastructure/shutdown.py",
    "ableton_mcp/core/logging.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]